--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -10,9 +10,12 @@
     {% include "partials/header.njk" %}
     
     <main>
+    {% include "partials/hero.njk" %}
+
     {% block body %}
     {# will be replaced by page content #}
     {% endblock %}
+    
     </main>
 
     {% include "partials/footer.njk" %}
