--- a/templates/simple.njk
+++ b/templates/simple.njk
@@ -1,6 +1,11 @@
 {% extends "layout.njk" %}
 
 {% block body %}
+  <section>
+        <div class="container">
+          {{ contents | safe }}
+        </div>
+  </section>
   <div class="container">
     {{ contents | safe }}
   </div>
